<resources>
    <string name="app_name">Movies</string>
    <string name="title_activity_tabbed">Details</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="noInternet">No internet connection</string>
    <string name="favorite">Favorite</string>
    <string name="popular_button">Popular</string>
    <string name="top_rated_button">TopRated</string>
    <string name="favorite_button">Favorite</string>
    <string name="top_rated">top_rated</string>
    <string name="popular">popular</string>
    <string name="review">REVIEW</string>
    <string name="rating">Rating</string>
    <string name="release_date">Release Date</string>
    <string name="title">Title</string>
    <string name="tab">Overview</string>
    <string name="up">Upcoming</string>
    <string name="now">Now Playing</string>
    <string name="upcoming">upcoming</string>
    <string name="nowplaying">now_playing</string>
    <string name="overview">Overview</string>
    <string name="titlesize">30sp</string>
</resources>
