<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.tada.shyam.movies_p2.Main2Activity"
    android:weightSum="1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="0.21">


        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:fitsSystemWindows="true"
            android:scaleType="centerCrop"
            android:src="@drawable/no_image_icon"
            app:layout_collapseMode="parallax"
            android:layout_weight="0.06" />

        <TextView
            android:id="@+id/original_title"
            android:layout_width="match_parent"
            android:layout_height="129dp"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/imageView2"
            android:paddingLeft="@dimen/title_paddingLeft"
            android:paddingStart="@dimen/title_paddingLeft"
            android:paddingTop="@dimen/title_paddingTop"
            android:text="@string/title"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textSize="@dimen/titletextsize"
            android:textStyle="bold"
            android:visibility="visible"
            android:textColor="@color/black"
            android:layout_weight="1.22" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="55dp">


            <TextView
                android:id="@+id/textView"
                android:layout_width="188dp"
                android:layout_height="wrap_content"
                android:text="@string/release_date"
                android:textAlignment="viewStart"
                android:textStyle="bold"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/release_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/original_title"

                android:layout_toEndOf="@+id/user_rating"
                android:text="@string/release_date"
                android:textSize="20sp" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="55dp">

            <TextView
                android:layout_width="188dp"
                android:layout_height="wrap_content"
                android:text="@string/rating"
                android:textAlignment="viewStart"
                android:textStyle="bold"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="20sp"
                />

        <TextView
            android:id="@+id/user_rating"
            android:layout_width="196dp"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/release_date"
            android:layout_alignBottom="@+id/release_date"

            android:layout_alignParentStart="true"
            android:text="@string/rating"
            android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="188dp"
                android:layout_height="wrap_content"
                android:text="@string/overview"
                android:textAlignment="textStart"
                android:textStyle="bold"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="20sp"
                />


            <TextView
                android:id="@+id/overviewTextView"
                android:layout_width="match_parent"
                android:layout_height="143dp"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/release_date"
                android:text="@string/tab"
                android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>

</android.support.v4.widget.NestedScrollView>